updated navbar help

--- a/Dorbox/templates/base.html
+++ b/Dorbox/templates/base.html
@@ -68,6 +68,10 @@
         </ul>
         <ul class = "navbar-nav ml-auto">
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:logout' %}">Help</a>
+          </li>
+
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'accounts:logout' %}">Log Out</a>
           </li>
 
