--- a/Dorbox/templates/base.html
+++ b/Dorbox/templates/base.html
@@ -68,7 +68,7 @@
         </ul>
         <ul class = "navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'accounts:logout' %}">Help</a>
+            <a class="nav-link" href="{% url 'help' %}">Help</a>
           </li>
 
           <li class="nav-item">
